# audio

./: .dockerignore  .env.example  .gitattributes  .gitignore  .mise.toml  AGENTS.md  CLAUDE.md  Dockerfile.backend  Dockerfile.frontend  MODELS.md  README.md  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.yml  launch-dist.bat  launch-dist.sh  main.js  package.json  pnpm-lock.yaml  preload.js  rag_agent_lora.md  setup-guide-preload.js  setup-guide.html
backend/: config.py  job_queue.py  logging_setup.py  main.py  models.py  poetry.toml  pyproject.toml  requirements.txt
backend/routers/: agent.py  convert.py  finetune.py  health.py  jobs.py  rag.py  system.py  tasks.py  tasks_llm.py  tasks_media.py  tasks_stt.py  tasks_tts.py  train.py  voices.py
backend/services/: media.py
backend/services/agent/: graph.py  tools.py
backend/services/finetune/: trainer.py
backend/services/image_gen/: comfyui_image_gen.py  dashscope_image_gen.py  flux_image_gen.py  gemini_image_gen.py  openai_image_gen.py  sd_image_gen.py  stability_image_gen.py
backend/services/image_i2i/: comfyui_i2i.py  facefusion_i2i.py
backend/services/image_understand/: anthropic_image_understand.py  gemini_image_understand.py  ollama_image_understand.py  openai_image_understand.py
backend/services/lipsync/: liveportrait_lipsync.py
backend/services/llm/: anthropic_llm.py  gemini_llm.py  github_llm.py  ollama_llm.py  openai_audio.py  openai_compat_llm.py  openai_llm.py
backend/services/ocr/: got_ocr.py
backend/services/rag/: indexer.py  querier.py
backend/services/stt/: dashscope_stt.py  deepgram_stt.py  faster_whisper_stt.py  gemini_stt.py  groq_stt.py  openai_stt.py  whisper_stt.py
backend/services/tts/: cartesia_tts.py  dashscope_tts.py  elevenlabs_tts.py  fish_speech_tts.py  gemini_tts.py  gpt_sovits_tts.py  minimax_tts.py  openai_tts.py
backend/services/vc/: local_vc.py
backend/services/video_gen/: kling_video_gen.py  wan_video_gen.py
backend/utils/: audio.py  audit.py  auth.py  engine.py  voices.py
backend/wrappers/: _common.py  manifest.json
backend/wrappers/facefusion/: inference.py
backend/wrappers/faster_whisper/: engine.json  inference.py
backend/wrappers/finetune/: train.py
backend/wrappers/fish_speech/: engine.json  fish_speech_cli.py  fish_speech_worker.py  inference.py
backend/wrappers/flux/: inference.py
backend/wrappers/gpt_sovits/: engine.json  inference.py  train.py
docs/: 1.md  (+4 more)
(+221 files in other folders)
