[tool.poetry]
name = "backend"
version = "0.1.0"
description = "AI Voice Backend"
authors = ["Your Name"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.100.0"
uvicorn = "^0.22.0"
python-multipart = "^0.0.6"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
