[tool.poetry]
name = "backend"
version = "0.1.0"
description = "AI Voice Backend"
authors = ["Your Name"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.100.0"
uvicorn = "^0.22.0"
python-multipart = "^0.0.6"
httpx = "^0.28.1"
huggingface_hub = ">=1.3.0,<2.0"
requests = ">=2.28"
pdf2docx = ">=0.5.8"
pymupdf = ">=1.24.0"
Pillow = ">=10.0.0"
qrcode = {version = ">=7.0", extras = ["pil"]}
zxing-cpp = ">=2.0"
# --- engine pip_packages (BASE engines) ---
setuptools = "*"
wheel = "*"
loguru = "*"
natsort = "*"
soundfile = "*"
loralib = "*"
pyrootutils = "*"
pydantic = "*"
rich = "*"
click = "*"
tqdm = "*"
tiktoken = "*"
munch = "*"
faster-whisper = "==1.2.1"
cn2an = "*"
pypinyin = "*"
jieba = "*"
jieba_fast = "*"
wordsegment = "*"
g2p_en = "*"
LangSegment = "*"
chardet = "*"
PyYAML = "*"
psutil = "*"
split-lang = "*"
fast_langdetect = ">=0.3.1"
ToJyutping = "*"
g2pk2 = "*"
ko_pron = "*"
opencc = "*"
ffmpeg-python = "*"
pyopenjtalk = ">=0.4.1"

[tool.poetry.group.engines-extra]
optional = true

[tool.poetry.group.engines-extra.dependencies]
# got_ocr
transformers = ">=4.48,<6"
verovio = "*"
# liveportrait
imageio = "*"
imageio-ffmpeg = "*"
av = "*"
omegaconf = "*"
einops = "*"
safetensors = "*"
onnx = "*"
onnxruntime = "*"
scikit-image = "*"
pykalman = "*"
# wan / flux
diffusers = ">=0.30"
accelerate = "*"
# flux
gguf = "*"
sentencepiece = "*"
protobuf = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
